...
            <Text style={styles.text}>{nameLetter}</Text>
          </Pressable>
        </CardWrapper>
        <CardWrapper style={styles.titleContainer}>
          <Pressable
            onPress={() => {
              props.navigation.navigate("Dashboard");
            }}
          >
            <Text style={styles.text}>{title}</Text>
          </Pressable>
        </CardWrapper>
      </View>
...
