...
      <View style={{ flex: 1, flexDirection: "row", gap: horizontalScale(10) }}>
        <View style={styles.icon}>
          <Ionicons
            name="ios-menu"
            size={30}
            color="white"
            testID="settings_icon"
            onPress={() => {
              props.navigation.navigate("Settings");
            }}
          />
        </View>
        <View style={styles.icon}>
...
