...
    // write your code here, it's like componentWillMount
    fetchData();
  }, []);

  const showAlert = () =>
    Alert.alert(
      "Clear All",
      "Are you sure you want to remove all purchases permanently?",
      [
        {
          text: "Yes",
          onPress: async () => {
            let info = await saveToStorage("purchases", "[]", email);
...
