...
                </Table>
              </View>
            </View>
          </View>
        ) : (
          <View style={{ flex: 8, justifyContent: "center", alignItems: "center" }}>
            <Text>NO DATA</Text>
          </View>
        )}
      </View>
    </View>
  );
}
...
